[RTC-456] Add peerless room purge (#150)
* [RTC-385] Add peerless room purge
* Add change from fix_metrics, update api spec
* Add log and guard
* Remove guard
* Update controversial test name
* Mock timers in tests
* Restore Elixir to 1.14, remove calls to Map.intersect
* lint
